<resources>
    <string name="app_name"></string>
    <string name="logo">USER MANAGER</string>
    <string name="seu_login">Seu login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="ok">Ok</string>
    <string name="login">Login</string>
    <string name="cadastro">CADASTRAR</string>
    <string name="listarUsuarios">Listar Usuarios</string>
    <string name="listarUsuariosLog">Listar Usuarios Logados</string>
    <string name="delUsuarios">Deletar Usuarios</string>
    <string name="listagemUsuarios">Listagem de Usuarios</string>
    <string name="listagemUsuarioLog">Listagem de Usuarios Logados</string>
</resources>