<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Activity_cadastro">

    <Button
        android:id="@+id/btnEntrar2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="112dp"
        android:background="#222229"
        android:elevation="10dp"
        android:text="@string/cadastro"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SenhaCadastro"
        app:rippleColor="#F83C0C"
        android:onClick="cadastrar"
        />

    <EditText
        android:id="@+id/LoginCadastro"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="67dp"
        android:autofillHints="@string/seu_login"
        android:ems="10"
        android:hint="@string/seu_login"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogo2" />

    <TextView
        android:id="@+id/textLogo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#1E1E1E"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SenhaCadastro"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="67dp"
        android:autofillHints="@string/senha"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPersonName|textPassword"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginCadastro" />

</androidx.constraintlayout.widget.ConstraintLayout>